magistr.dk/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magistr
  labels:
    app.kubernetes.io/name: magistr
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: magistr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: magistr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: magistr
        image: ghcr.io/rwx-labs/magistr:edge
        ports:
        - name: http
          containerPort: 3000
        resources:
          limits:
            memory: 512M
            cpu: 6
          requests:
            memory: 128M
            cpu: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
