magistr.dk/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magistr
spec:
  selector:
    app.kubernetes.io/name: magistr
  type: ClusterIP
  ports:
  - name: http
    port: 3000
